# ConfigurationManager

./: .gitignore  CMakeLists.txt  README.md
examples/: config.ini  config_error.ini
include/: ConfigurationManager.hpp  IConfigParser.hpp  IniParser.hpp
lib/: error-handler.hpp
parsers.cpp/: IniParser.cpp
parsers.hpp/: IniParser.hpp
src/: ConfigurationManager.cpp  IniParser.cpp  main.cpp
